# pencil2pptx

./: .gitignore  README.md  blog.md  pyproject.toml
src/pencil2pptx/: __init__.py  __main__.py
